--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,9 +1,9 @@
 clear;
 echo "Loading";
-echo "Fin#1337's TF2 Config v1.0.1";
+echo "Fin#1337's TF2 Config v1.0.2";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: August 9th 2022";
+echo "Last edited: October 16th 2022";
 echo "";
 echo "";
 echo "";
@@ -37,12 +37,12 @@ tf_mm_trusted "1";                                              // "Set to 1 on 
 sv_steamblockingcheck "4";                                      // Check each new player for Steam blocking compatibility, 1 = message only, 2 >= drop if any member of owning clan blocks,3 >= drop if any player has blocked, 4 >= drop if player has blocked anyone on server
 cl_mute_all_comms "1";                                          // If 1, then all communications from a player will be blocked when that player is muted, including chat messages.
 exec "fixed_360controller.cfg";                                 // Enables controller support
-hostname "Fin's TF2 Config 1.0.1 - github.com/bigfinfrank/cfg"; // Sets the server name shown in the scoreboard
+hostname "Fin's TF2 Config 1.0.2 - github.com/bigfinfrank/cfg"; // Sets the server name shown in the scoreboard
 
 
 
 echo "[1.0] Configuring client-side networking";
-tf_mm_custom_ping "130";                                        // Won't matchmake into servers where you have ping above the set ping
+tf_mm_custom_ping "80";                                         // Won't matchmake into servers where you have ping above the set ping
 tf_mm_custom_ping_enabled "1";                                  // Whether to use a custom ping tolerance when matchmaking
 cl_downloadfilter "nosounds";                                   // Doesn't download custom sound files in community servers
 cl_localnetworkbackdoor "0";                                    // Enable/disable network optimizations for single player games.
@@ -273,7 +273,7 @@ m_mousespeed  "0";                                              // Windows mouse
 m_customaccel "0";                                              // Custom mouse acceleration: 0: custom accelaration disabled 1: mouse_acceleration
 m_mouseaccel1 "0";                                              // Windows mouse acceleration initial threshold (2x movement).
 m_mouseaccel2 "0";                                              // Windows mouse acceleration secondary threshold (4x movement).
-sensitivity "3";                                                // Mouse sensitivity.
+sensitivity "3.181818";                                         // Mouse sensitivity.
 m_pitch "0.022";                                                // Mouse pitch factor (0.022 is default) - if you don't know what this is, don't mess with it.
 m_rawinput "1";                                                 // Use Raw Input for mouse input, this is generally intended to bypass software tweaks to mouse input like acceleration or smoothing
 m_forward "1";                                                  // Mouse forward factor (with cl_mouselook 0, this controls the movement translation vertically/horizontally)
@@ -572,7 +572,7 @@ tf_training_has_prompted_for_offline_practice "1";
 tf_training_has_prompted_for_options "1";
 tf_training_has_prompted_for_training "1";
 cl_training_class_unlock_all;
-cl_training_completed_with_classes "511"; // 16 bit representation: 0000 0001 1111 1111
+cl_training_completed_with_classes "511"; // bitwise int -> 16 bit representation: 0000 0001 1111 1111
 tf_romevision_skip_prompt "1";
 tf_mvm_tabs_discovered "1";
 tf_matchmaking_ticket_help "1";
@@ -586,7 +586,7 @@ alias "+ncmleft"     "-moveright;+moveleft;alias ncmcancelleft +moveleft";
 alias "+ncmright"    "-moveleft;+moveright;alias ncmcancelright +moveright";
 
 alias "-ncmforward"  "-forward;ncmcancelbackward;alias ncmcancelforward";
-alias "-ncmbackward" "-back;ncmcancelleft;alias ncmcancelbackward";
+alias "-ncmbackward" "-back;ncmcancelforward;alias ncmcancelbackward";
 alias "-ncmleft"     "-moveleft;ncmcancelright;alias ncmcancelleft";
 alias "-ncmright"    "-moveright;ncmcancelleft;alias ncmcancelright";
 
@@ -642,16 +642,16 @@ bind "KP_MINUS"       "condump; exec autoexec.cfg;                      ; keycon
 
 echo "[6.2] Setting up binds for keyboard row 3";
 bind "TAB"            "+scorenet;                                       ; keycontainer";                        // This is the tab key
-bind "q"              "                                                 ; keycontainer";                        // This is the q key
-bind "D"              "lastinv;                                         ; keycontainer";                        // This is the w key
-bind "R"              "+ncmforward;                                     ; keycontainer";                        // This is the e key
-bind "W"              "+defuse;                                         ; keycontainer";                        // This is the r key
-bind "B"              "+reload; r_cleardecals;                          ; keycontainer";                        // This is the t key
-bind "J"              "impulse 201;                                     ; keycontainer";                        // This is the y key
-bind "F"              "say";                                                                                    // This is the u key
-bind "U"              "say_team";                                                                               // This is the i key
-bind "P"              "say_party";                                                                              // This is the o key
-bind "SEMICOLON"      "say_party";                                                                              // This is the p key
+bind "Q"              "                                                 ; keycontainer";                        // This is the q key
+bind "W"              "lastinv;                                         ; keycontainer";                        // This is the w key
+bind "E"              "+ncmforward;                                     ; keycontainer";                        // This is the e key
+bind "R"              "+defuse;                                         ; keycontainer";                        // This is the r key
+bind "T"              "+reload; r_cleardecals;                          ; keycontainer";                        // This is the t key
+bind "Y"              "impulse 201;                                     ; keycontainer";                        // This is the y key
+bind "U"              "say";                                                                                    // This is the u key
+bind "I"              "say_team";                                                                               // This is the i key
+bind "O"              "say_party";                                                                              // This is the o key
+bind "P"              "say_party";                                                                              // This is the p key
 bind "["              "cl_trigger_first_notification;                   ; keycontainer";                        // This is the [ key
 bind "]"              "cl_decline_first_notification;                   ; keycontainer";                        // This is the ] key
 bind  \               "                                                 ; keycontainer";                        // This is the backslash key. Quotes are missing due to formatting issues with backslashes.
@@ -668,14 +668,14 @@ echo "[6.3] Setting up binds for keyboard row 4";
 bind "CAPSLOCK"       "                                                 ; keycontainer";                        // This is the caps lock key
 bind "A"              "                                                 ; keycontainer";                        // This is the a key
 bind "S"              "+ncmleft;                                        ; keycontainer";                        // This is the s key
-bind "H"              "+ncmbackward;                                    ; keycontainer";                        // This is the d key
-bind "T"              "+ncmright;                                       ; keycontainer";                        // This is the f key
+bind "D"              "+ncmbackward;                                    ; keycontainer";                        // This is the d key
+bind "F"              "+ncmright;                                       ; keycontainer";                        // This is the f key
 bind "G"              "+taunt";                                                                                 // This is the g key
-bind "Y"              "+use_action_slot_item;                           ; keycontainer";                        // This is the h key
-bind "N"              "+spin;                                           ; keycontainer";                        // This is the j key
-bind "E"              "                                                 ; keycontainer";                        // This is the k key
-bind "O"              "dropitem;                                        ; keycontainer";                        // This is the l key
-bind "I"              "disconnect;                                      ; keycontainer";                        // This is the ; key
+bind "H"              "+use_action_slot_item;                           ; keycontainer";                        // This is the h key
+bind "J"              "+spin;                                           ; keycontainer";                        // This is the j key
+bind "K"              "                                                 ; keycontainer";                        // This is the k key
+bind "L"              "dropitem;                                        ; keycontainer";                        // This is the l key
+bind "SEMICOLON"      "disconnect;                                      ; keycontainer";                        // This is the ; key
 bind "'"              "+moveup;                                         ; keycontainer";                        // This is the apostrophe key
 bind "ENTER"          "                                                 ; keycontainer";                        // This is the return key
 bind "KP_LEFTARROW"   "                                                 ; keycontainer";                        // This is the Numpad 4 key
@@ -688,13 +688,13 @@ echo "[6.4] Setting up binds for keyboard row 5";
 bind "SHIFT"          "+loudshift;                                      ; keycontainer";                        // This is the left shift key
 bind "Z"              "voicemenu 0 0;                                   ; keycontainer";                        // This is the z key
 bind "X"              "voice_menu_1;                                    ; keycontainer";                        // This is the x key
-bind "M"              "voice_menu_2;                                    ; keycontainer";                        // This is the c key
-bind "C"              "voice_menu_3;                                    ; keycontainer";                        // This is the v key
-bind "V"              "+voicerecord";                                                                           // This is the b key, adding keycontainer breaks voice in the main menu
-bind "K"              "lastdisguise;                                    ; keycontainer";                        // This is the n key
-bind "L"              "open_charinfo_backpack;                          ; keycontainer";                        // This is the m key
-bind ","              "changeclass;                                     ; keycontainer";                        // This is the period/full stop key
+bind "C"              "voice_menu_2;                                    ; keycontainer";                        // This is the c key
+bind "V"              "voice_menu_3;                                    ; keycontainer";                        // This is the v key
+bind "B"              "+voicerecord";                                                                           // This is the b key, adding keycontainer breaks voice in the main menu
+bind "N"              "lastdisguise;                                    ; keycontainer";                        // This is the n key
+bind "M"              "open_charinfo_backpack;                          ; keycontainer";                        // This is the m key
 bind "."              "open_charinfo_changeclass;                       ; keycontainer";                        // This is the comma key
+bind ","              "changeclass;                                     ; keycontainer";                        // This is the period/full stop key
 bind "/"              "changeteam;                                      ; keycontainer";                        // This is the slash key
 bind "RSHIFT"         "; +loudshift;                                    ; keycontainer";                        // This is the right shift key
 bind "UPARROW"        "                                                 ; keycontainer";                        // This is the up arrow key
@@ -888,10 +888,10 @@ echo "";
 echo "";
 echo "";
 echo "Loaded";
-echo "Fin#1337's TF2 Config v1.0.1";
+echo "Fin#1337's TF2 Config v1.0.2";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: August 9th 2022";
+echo "Last edited: October 16th 2022";
 echo "";
 echo "";
 echo "";
