--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -36,7 +36,7 @@ sv_contact "tf2cfg@fin.fail";                                   // Contact email
 tf_mm_trusted "1";                                              // "Set to 1 on Valve servers to requested trusted status."
 sv_steamblockingcheck "4";                                      // Check each new player for Steam blocking compatibility, 1 = message only, 2 >= drop if any member of owning clan blocks,3 >= drop if any player has blocked, 4 >= drop if player has blocked anyone on server
 cl_mute_all_comms "1";                                          // If 1, then all communications from a player will be blocked when that player is muted, including chat messages.
-exec "undo360controller.cfg";                                   // Enables controller support
+exec "./config/utility/undo360controller.cfg";                    // Enables controller support
 hostname "Fin's TF2 Config 1.0.3 - github.com/bigfinfrank/cfg"; // Sets the server name shown in the scoreboard
 
 
@@ -148,11 +148,11 @@ alias "-fin_spin" "m_yaw 0.022";                                // Sets the mult
 
 
 echo "[3.3.1] Setting up detailed scoreboard";
-alias "+fin_scorenet" "+showscores; net_graph 4; net_graphheight 375;  cl_showfps 2; cl_showpos 1; ds_status; timeleft";   // This gives the scoreboard much more
+alias "+fin_scorenet" "+showscores; net_graph 4; net_graphheight 375;  cl_showfps 2; cl_showpos 1";   // This gives the scoreboard much more
 alias "-fin_scorenet" "-showscores; net_graph 1; net_graphheight 9999; cl_showfps 0; cl_showpos 0";   // information, at the cost of vision.
 
 alias "fin_scorenet"    "fin_scoreneton";                       // Toggle alias for the scorenet
-alias "fin_scoreneton"  "togglescores; net_graphheight 375;  cl_showfps 2; cl_showpos 1; timeleft; alias fin_scorenet fin_scorenetoff";
+alias "fin_scoreneton"  "togglescores; net_graphheight 375;  cl_showfps 2; cl_showpos 1; alias fin_scorenet fin_scorenetoff";
 alias "fin_scorenetoff" "togglescores; net_graphheight 9999; cl_showfps 0; cl_showpos 0; alias fin_scorenet fin_scoreneton";
 
 
@@ -184,7 +184,7 @@ alias "-fin_knife" "lastinv";                                   // hold your kni
 
 
 echo "[3.3.7] Worshipping Gabe";
-alias "fin_gaben" "exec gaben.cfg";                             // Setup clean Gabe Newell ASCII art printout
+alias "fin_gaben" "exec ./config/utility/gaben.cfg";              // Setup clean Gabe Newell ASCII art printout
 
 
 echo "[3.3.8] Setting up chat aliases";                         // Reminder that chat can display 7 lines on screen while unfocused
@@ -229,11 +229,11 @@ alias "fin_512tick" "sv_minupdaterate 512; sv_maxupdaterate 512; sv_mincmdrate 5
 
 
 echo "[3.3.10] Setting up customunbindalljoystick alias";
-alias "fin_customunbindalljoystick" "exec customunbindalljoystick.cfg";
+alias "fin_customunbindalljoystick" "exec ./config/utility/customunbindalljoystick.cfg";
 
 
 echo "[3.3.11] Setting up clearinputs alias";
-alias "fin_clearinputs" "exec clearinputs.cfg";
+alias "fin_clearinputs" "exec ./config/utility/clearinputs.cfg";
 
 
 echo "[3.3.12] Setting up sv_cheats toggle aliases"; // Credit: https://github.com/JarateKing/jarconfig/blob/master/cfg/binds/cheats.cfg
